--- a/api/config/config.json
+++ b/api/config/config.json
@@ -1,6 +1,8 @@
 {
-  "debug":true,
   "secretKey":"django-insecure-i&5ia(st50%1#r^wju7bx0)w-b-_2v0%gsj#&_71+z_x8lkfvy",
+
+  "debug":true,
+  "supplyGUIResponse": true,
   
   "hostDB":"localhost",
   "portDB":"27017",
