Added vault in 'urls.py' and 'views.py'. Vault functionality delayed.

--- a/api/config/config.json
+++ b/api/config/config.json
@@ -2,7 +2,7 @@
   "secretKey":"django-insecure-i&5ia(st50%1#r^wju7bx0)w-b-_2v0%gsj#&_71+z_x8lkfvy",
 
   "debug":true,
-  "supplyGUIResponse": true,
+  "supplyGUIResponse": false,
   
   "hostDB":"localhost",
   "portDB":"27017",
