Useing config.json file for the length of salts

--- a/config.json
+++ b/config.json
@@ -11,5 +11,6 @@
   "username_max_length":10,
   "password_min_length":6,
   "password_max_length":20,
-  "sessionId_length":16
+  "sessionId_length":16,
+  "salt_length":16
 }
