--- a/config.json
+++ b/config.json
@@ -7,6 +7,7 @@
   "db_host":"127.0.0.1",
   "db_port":"27017",
   "db_password":"apmuserpass",
+  "server_port":8080,
   "username_min_length":3,
   "username_max_length":10,
   "password_min_length":6,
