--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
   "debug":true,
   "secret_key":"django-insecure-czhaxh*di+t*laxo%=bmj8e+8970)#8tgt&77)7&ixd#3j=j=l",
-  "allowed_hosts":[],
+  "allowed_hosts":["*"],
   "db_name":"apm",
   "db_username":"apm",
   "db_host":"127.0.0.1",
