--- a/config.json
+++ b/config.json
@@ -7,6 +7,7 @@
   "db_host":"127.0.0.1",
   "db_port":"27017",
   "db_password":"apmuserpass",
+  "db_srv":true,
   "server_host":"0.0.0.0",
   "server_port":"8000",
   "username_min_length":3,
