--- a/api/vercel.json
+++ b/api/vercel.json
@@ -4,8 +4,7 @@
       "src": "api/wsgi.py",
       "use": "@vercel/python",
       "config": {
-        "runtime": "python3.12",
-        "installCommand": "pip install -r requirements.txt"
+        "runtime": "python3.12"
       }
     }
   ],
