--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ colorama==0.4.6
 cryptography==41.0.3
 Django==5.0.2
 dnspython==2.6.1
+dotenv==0.9.9
 idna==3.6
 jaraco.classes==3.3.1
 jeepney==0.8.0
@@ -15,6 +16,7 @@ keyring==24.2.0
 more-itertools==10.2.0
 packaging==24.1
 pefile==2024.8.26
+pillow==11.3.0
 pycparser==2.21
 pyinstaller==6.10.0
 pyinstaller-hooks-contrib==2024.8
