--- a/requirements.txt
+++ b/requirements.txt
@@ -4,11 +4,13 @@ bcrypt==4.0.1
 certifi==2024.2.2
 cffi==1.16.0
 charset-normalizer==3.3.2
+click==8.2.1
 colorama==0.4.6
 cryptography==41.0.3
 Django==5.0.2
 dnspython==2.6.1
 dotenv==0.9.9
+h11==0.16.0
 idna==3.6
 jaraco.classes==3.3.1
 jeepney==0.8.0
@@ -34,5 +36,6 @@ swiftcrypt==0.3.5.11
 typing_extensions==4.10.0
 tzdata==2024.2
 urllib3==2.2.1
+uvicorn==0.35.0
 waitress==3.0.0
 wheel==0.41.2
