Moved secrets into .env and settings into .json

--- a/config.json
+++ b/config.json
@@ -1,27 +1,19 @@
 {
-  "debug":true,
-  "secret_key":"django-insecure-czhaxh*di+t*laxo%=bmj8e+8970)#8tgt&77)7&ixd#3j=j=l",
-  "allowed_hosts":["*"],
-  "db_name":"apm",
-  "db_username":"apm",
-  "db_host":"127.0.0.1",
-  "db_port":"27017",
-  "db_password":"apmuserpass",
-  "db_srv":true,
-  "server_host":"0.0.0.0",
-  "server_port":"8000",
-  "username_min_length":3,
-  "username_max_length":10,
-  "password_min_length":6,
-  "password_max_length":20,
-  "sessionId_length":16,
-  "salt_length":16,
-  "max_sessions":10,
-  "pp_width":150,
-  "pp_height":150,
-  "email_verification":true,
-  "email_host":"smtp.gmail.com",
-  "email_port":587,
-  "email_host_user":"",
-  "email_host_password":""
+  "debug": true,
+  "allowed_hosts": [
+    "*"
+  ],
+  "db_srv": true,
+  "server_host": "0.0.0.0",
+  "server_port": "8000",
+  "username_min_length": 3,
+  "username_max_length": 10,
+  "password_min_length": 6,
+  "password_max_length": 20,
+  "sessionId_length": 16,
+  "salt_length": 16,
+  "max_sessions": 10,
+  "pp_width": 150,
+  "pp_height": 150,
+  "email_verification": false
 }
