--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
+python==3.10
 altgraph==0.17.4
 asgiref==3.7.2
 bcrypt==4.0.1
+brotli==1.2.0
 certifi==2024.2.2
 cffi==1.16.0
 charset-normalizer==3.3.2
@@ -12,6 +14,7 @@ dnspython==2.6.1
 dotenv==0.9.9
 h11==0.16.0
 idna==3.6
+importlib_metadata==8.7.0
 jaraco.classes==3.3.1
 jeepney==0.8.0
 keyring==24.2.0
@@ -30,7 +33,6 @@ pywin32-ctypes==0.2.3
 qrcode==7.4.2
 requests==2.31.0
 SecretStorage==3.3.3
-setuptools==68.2.2
 sqlparse==0.4.4
 swiftcrypt==0.3.5.11
 typing_extensions==4.10.0
@@ -38,5 +40,5 @@ tzdata==2024.2
 urllib3==2.2.1
 uvicorn==0.35.0
 waitress==3.0.0
-wheel==0.41.2
 whitenoise==6.9.0
+zipp==3.23.0
